src/tests/snapshots/niri__tests__window_opening__check_target_size@ofT-dhP0.5-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open floating: true\ndefault window height: P0.5\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 0 × 360, bounds: 1280 × 720, states: []

post-map configures:
size: 0 × 360, bounds: 1280 × 720, states: []
size: 1 × 360, bounds: 1280 × 720, states: [Activated]
